# another-note-taking-app

./: .gitignore  README.md  __init__.py  cli.py  main.py  manager.py  note.py  pyproject.toml  search.py  setup.py  storage.py
note_app/: cli.py  config.py  main.py  manager.py  note.py  search.py  storage.py
note_taker_plugin/: note_taker.plug  note_taker.py  requirements.txt
notes/: Another_Note.json  Comprehensive_Test.json  My_First_Note.json  Python_Learning_Resources.json  Test_Note_Numbers.json  URL_Test_Note.json
tests/: test_git_and_config.py  test_note_app.py  test_search.py  test_universal_search.py
